Correcting blurry image removing cookies consent ent and fixing coming soon text issue

--- a/src/app/components/landing/landing.component.scss
+++ b/src/app/components/landing/landing.component.scss
@@ -94,6 +94,7 @@
   font-weight: 400;
   line-height: 26px;
   text-align: center;
+  padding-bottom: 2px;
   background-image: linear-gradient(90deg, #ff7f2c 48.77%, #ff0082 60.9%);
   background-clip: text;
   -webkit-background-clip: text;
@@ -152,6 +153,11 @@
   color: white;
 }
 .phone-img {
+  max-height: 700px;
+  img{
+    max-height: 700px;
+    transform: rotate(2deg);
+  }
   @media screen and (max-width: 600px) {
     max-width: 91px;
     max-height: 219px;
